Fix user selection prompt toggle

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -237,7 +237,7 @@ $home = /home/kisaragi/
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod SHIFT, E, exec, ~/.config/hypr/scripts/confirm-exit.sh
+bind = $mainMod SHIFT, E, exec, pkill wofi || ~/.config/hypr/scripts/confirm-exit.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, pkill wofi || $menu
