--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -156,9 +156,9 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 1.4, quick, slide
+    animation = workspacesIn, 1, 1.21, quick, slide
+    animation = workspacesOut, 1, 1.4, quick, slide
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
