--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -162,7 +162,7 @@
         "interval": 5,
         "format": "{capacity}% {icon}",
         "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
+        "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
